Revision	Log Message
---------	----------------
1		Initial commit
2		Initial parser
3		Automated build batch file
4		Copy data files on build
5		Automated Test and Build_and_Test batch files
6		Add initial province mapping with Iceland mapped
7		Output a minimal yet functional EU3 save
8		Add configuration file and relating code
9		ROTW provinces get ownership from EU3 install
10		England Ireland Scotland Wales mapped
11		CK2 cultures mapped, except for german and italian
12		Gunther's province mappings
13		Fix bug uncovered by ROTW mappings
14		Middle East and Persia mapped
15		EU3 starts at the date CK2 ended
16		Merge
17		Start date taken into account for ROTW provinces
18		Added missing CK2World files
19		Read in titles
20		Create tree of vassal/liege relationships
21		Country Mappings
22		Iberian Peninsula and Med Islands mapped	
23		Italy and Scandiwegia mapped
24		England save from rho
25		Country Mappings: Independent kingoms
26		European province ownership
27		Merge
28		1-to-1 titular kingdoms mapped
29		Add HRE conversion mechanic
30		European provinces visible to all
31		Merge
32		Change country mapping to map a pointer to the EU3 Country itself
33		Output countries
34		Use /history/countries/ instead of /common/countries.txt