@@ -34,3 +34,4 @@ Revision	Log Message
 32		Change country mapping to map a pointer to the EU3 Country itself
 33		Output countries
 34		Use /history/countries/ instead of /common/countries.txt
+35		Change country mapping to map a pointer to the CK2 Title itself
